SERVER-22322 Add namespaces to listIndexes NamespaceNotFound messages

(cherry picked from commit 9c23775905ef7a9612304c677114cb5f921bd54e)